--- a/src/pages/cv/cvapp/components/secondary/bulletpoint/bulletpoint.css
+++ b/src/pages/cv/cvapp/components/secondary/bulletpoint/bulletpoint.css
@@ -3,9 +3,20 @@
     font-size: 85%;
     color: var(--cv-light-text-color);
     line-height: 100%;
-    margin-top: 3px;
+    margin-top: 4px;
     width: 100%;
 }
+
+.cv-course {
+    font-size: 90%;
+    margin-top: 15px;
+    font-weight: 700;
+}
+
+.cv-course:last-child {
+    margin: 15px 0;
+}
+
 
 .cv-point-svg {
     color: var(--cv-light-text-color);
