--- a/src/Main/home/home.css
+++ b/src/Main/home/home.css
@@ -4,6 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 8rem;
     width: 100%;
     height: 100vh;
     align-items: center;
@@ -38,7 +39,6 @@
     font-size: 1.2rem;
     line-height: 1.5em;
     margin-top: 2rem;
-    width: 85%;
 }
 
 .home-img img {
