--- a/src/languages/language/language.css
+++ b/src/languages/language/language.css
@@ -18,6 +18,7 @@
     align-items: center;
     flex-direction: column;
     bottom: 100%;
+    left: -16%;
     height: fit-content;
     border-radius: 1rem;
     z-index: 2;
@@ -29,11 +30,16 @@
 }
 
 .languages-bar button {
+    display: flex;
     color: var(--text-color);
     font-size: 1.4rem;
     padding: 1rem 2rem 2rem 2rem;
     background: transparent;
     cursor: pointer;
+    transition: .1s ease;
+    width: 100%;
+    gap: .8rem;
+    align-items: center;
 }
 
 .show-language-bar {
@@ -48,9 +54,11 @@
 }
 
 .language div svg {
-    font-size: 2.2rem;
+    height: 2.2rem;
+    width: 2.2rem;
 }
 
 .languages-bar button:hover {
     color: var(--main-color);
+    transform: scale(1.1);
 }
