translating the entire main page into arabic, except for header and navbar

--- a/src/index.css
+++ b/src/index.css
@@ -101,6 +101,10 @@ section:nth-of-type(odd)::before {
     text-align: right;
 }
 
+.onlytext-rtl {
+    text-align: right;
+}
+
 .heading {
     text-align: center;
     font-size: 4.5rem;
