--- a/src/Main/skills/skills.css
+++ b/src/Main/skills/skills.css
@@ -56,6 +56,8 @@
     width: 95%;
     position: relative;
     padding: 1.7rem;
+    min-width: 30rem;
+    max-width: 45rem;
 }
 
 .experience-year {
@@ -66,7 +68,6 @@
 .experience-box h3 {
     font-size: 2.1rem;
     padding: 1rem 0 1rem 0;
-
 }
 
 .experience-box h5 {
