adding language bar to the navbar and fixing general issues

--- a/src/Main/contact/contact.css
+++ b/src/Main/contact/contact.css
@@ -35,16 +35,22 @@ form .btn {
     width: 49%;
 }
 
-.contact form textarea {
-    resize: none;
-}
-
 /*RESPONSIVE*/
 
 /*991px*/
 @media (max-width: 991px) {
     .contact {
         min-height: auto;
+    }
+}
+
+
+
+/* 450 */
+@media (max-width: 768px) {
+
+    .contact form {
+        width: 90%;
     }
 }
 
