trnalsating navbar and header into russian and german

--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ svg {
 :root {
     /* MAIN */
     --bg-color: #1f242d;
-    --second-bg-color: #303743;
+    --second-bg-color: #2a303b;
     --text-color: #fff;
     --main-color: #0ef;
     --main-half-opacity: rgba(0, 238, 255, 0.6);
