--- a/src/Main/portfolio/portfolio.css
+++ b/src/Main/portfolio/portfolio.css
@@ -2,7 +2,7 @@
     margin-bottom: 4rem;
 }
 
-.protfolio-container {
+.portfolio-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     align-items: center;
@@ -91,7 +91,7 @@
 }
 
 @media (max-width: 903px) {
-    .protfolio-container{
+    .portfolio-container{
         grid-template-columns: repeat(2, 1fr);
     }
 
@@ -112,7 +112,7 @@
         margin-bottom: 3rem;
     }
 
-    .protfolio-container{
+    .portfolio-container{
         grid-template-columns: repeat(2, 1fr);
     }
 
@@ -150,7 +150,7 @@
         height: 18rem;
     }
 
-    .protfolio-container{
+    .portfolio-container{
         grid-template-columns: 1fr;
     }
 
