a lot of changes, here is what have been changed: 1- finished the projects section, but without responsive design. 2- translated the entire section. 3- translated cv section. 4- added footer to all section.

--- a/src/Main/footer/footer.css
+++ b/src/Main/footer/footer.css
@@ -4,8 +4,15 @@
     align-items: center;
     flex-wrap: center;
     padding: 2rem 9%;
-    background: var(--second-bg-color);
     position: relative;
+}
+
+.footer-dark {
+    background: var(--bg-color);
+}
+
+.footer-light {
+    background: var(--second-bg-color);
 }
 
 .footer-text p {
