--- a/src/pages/projects/projects.css
+++ b/src/pages/projects/projects.css
@@ -1,49 +1,53 @@
+.projects-section {
+    padding-top: 10rem;
+}
+
 .projects-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     align-items: center;
-    gap: 1.5rem;
+    gap: 5rem;
     margin-top: 5rem;
+    padding: 2rem;
 }
 
 .projects-box {
-    position: relative;
     border-radius: 2rem;
-    box-shadow: 0 0 1rem var(--bg-color);
-    overflow: hidden;
     display: flex;
-    height: 22rem;
-}
-
-.projects-box img {
-    width: 100%;
-    height: 100%;
+    flex-direction: column;
+    gap: 2.5rem;
+    height: 460px;
+    background: var(--second-bg-color);
     transition: .5s ease;
+    border: 2px solid var(--second-bg-color);
+    padding: 1.5rem;
 }
 
-.projects-box:hover img {
-    transform: scale(1.1);
+.projects-box:hover {
+    transform: scale(1.04);
+    border-color: var(--main-color);
+}
+
+.projects-image-container {
+    width: 100%;
+}
+
+.projects-image-container img {
+    height: 100%;
+    width: 100%;
+    border-radius: 1rem;
 }
 
 .projects-layer {
-    position: absolute;
-    bottom: 0;
-    left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(var(--bg-half-opacity), var(--main-half-opacity));
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     flex-direction: column;
     text-align: center;
-    padding: 0 2.5rem;
-    transform: translateY(100%);
+    padding: 0 1.5rem;
     transition: .5s ease;
-}
-
-.projects-box:hover .projects-layer {
-    transform: translateY(0);
 }
 
 .projects-layer h4 {
@@ -52,12 +56,13 @@
 
 .projects-layer p {
     font-size: 1.2rem;
-    margin: .5rem 1rem 1rem;
+    margin: 1rem 0;
 }
 
 .projects-links-container {
     display: flex;
-    flex-direction: row;
+    gap: 2rem;
+    padding: 1rem 0;
 }
 
 .projects-layer div a {
@@ -66,11 +71,8 @@
     align-items: center;
     font-weight: bold;
     font-size: 1.2rem;
-    background: var(--bg-color);
-    border-radius: 5rem;
     padding: .9rem;
-    margin: 1rem;
-    color: var(--text-color);
+    box-shadow: 0 0 15px var(--main-color);
 }
 
 .projects-layer div a svg {
