--- a/src/Main/home/home.css
+++ b/src/Main/home/home.css
@@ -41,26 +41,39 @@
     margin-top: 2rem;
 }
 
+.home-img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .home-img img {
     position: relative;
     height: 30vw;
     width: 30vw;
     max-width: 50rem;
     max-height: 50rem;
-    border-radius: 50%;
-    border: 5px solid rgba(0, 238, 255, 0.5);
     opacity: 0;
     z-index: 2;
 }
 
+.home-image-shadow {
+    position: absolute;
+    border-radius: 50%;
+    height: 10%;
+    width: 10%;
+    animation: boxShadowAnimation 2s ease forwards;
+    animation-delay: 2.1s;
+}
+
 .home-img-animation {
-    animation: fadeInLeft 2s ease forwards, boxShadowAnimation 1.8s ease forwards, floatImage 4s ease-in-out infinite;
-    animation-delay: 1s, 1.1s, 3s;
+    animation: fadeInLeft 2s ease forwards, floatImage 4s ease-in-out infinite;
+    animation-delay: 1s, 3s;
 }
 
 .home-img-animation-rtl {
-    animation: fadeInLeftRTL 2s ease forwards, boxShadowAnimation 1.8s ease forwards, floatImage 4s ease-in-out infinite;
-    animation-delay: 1s, 1.1s, 3s;
+    animation: fadeInLeftRTL 2s ease forwards, floatImage 4s ease-in-out infinite;
+    animation-delay: 1s, 3s;
 }
 
 .social-media a {
