--- a/src/pages/projects/projects.css
+++ b/src/pages/projects/projects.css
@@ -5,7 +5,6 @@
 .projects-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    align-items: center;
     gap: 5rem;
     margin-top: 5rem;
     padding: 2rem;
@@ -16,16 +15,16 @@
     display: flex;
     flex-direction: column;
     gap: 2.5rem;
-    height: 460px;
+    height: 203px;
     background: var(--second-bg-color);
-    transition: .5s ease;
-    border: 2px solid var(--second-bg-color);
-    padding: 1.5rem;
+    transition: .8s ease;
+    border: 3px solid var(--second-bg-color);
+    overflow: hidden;
 }
 
 .projects-box:hover {
-    transform: scale(1.04);
     border-color: var(--main-color);
+    height: 460px;
 }
 
 .projects-image-container {
@@ -33,9 +32,8 @@
 }
 
 .projects-image-container img {
-    height: 100%;
+    height: 199px;
     width: 100%;
-    border-radius: 1rem;
 }
 
 .projects-layer {
@@ -103,10 +101,6 @@
         padding: 10.52vh 7% 20vh;
     }
 
-    .projects-box {
-        height: 16rem;
-    }
-
     .projects h2{
         margin-bottom: 3rem;
     }
@@ -143,10 +137,6 @@
 
     .projects-layer p{
         font-size: 1.2rem;
-    }
-
-    .projects-box {
-        height: 18rem;
     }
 
     .projects-container{
