adding Telecom Egypt internship commit

--- a/src/pages/blog/main/articlepage/articlepage.css
+++ b/src/pages/blog/main/articlepage/articlepage.css
@@ -3,4 +3,5 @@
     background: var(--second-bg-color);
     padding: 6rem;
     border-radius: 2rem;
+    box-shadow: 0 0 1rem 1px var(--main-color);
 }
