--- a/src/pages/blog/main/articlepage/articleComponents/list/lists.css
+++ b/src/pages/blog/main/articlepage/articleComponents/list/lists.css
@@ -1,6 +1,7 @@
 .article-list-container {
     font-size: 1.4rem;
-    padding: 1.5rem 0 0 7%;
+    padding: 1.5rem 7% 0 7%;
+    list-style-position: inside;
 }
 
 .article-list-container li {
@@ -9,7 +10,8 @@
 
 .article-list-extra-padding-container {
     font-size: 1.4rem;
-    padding: 1.5rem 0 0 12%;
+    padding: 1.5rem 12% 0 12%;
+    list-style-position: inside;
 }
 
 .article-list-extra-padding-container li {
