fixing translation problems in home section and blog posts

--- a/src/index.css
+++ b/src/index.css
@@ -106,6 +106,10 @@ section {
     text-align: right;
 }
 
+.right {
+    right: 0;
+}
+
 .heading {
     text-align: center;
     font-size: 4.5rem;
