--- a/src/Main/home/home.css
+++ b/src/Main/home/home.css
@@ -78,6 +78,7 @@
 
 .social-media-and-button-container {
     display: flex;
+    position: absolute;
     flex-direction: column;
     align-items: center;
     width: fit-content;
