--- a/src/pages/stats/stats.css
+++ b/src/pages/stats/stats.css
@@ -12,10 +12,16 @@
     margin-top: 4rem;
 }
 
+.stats-Lanugage-time-stats {
+    display: flex;
+    justify-content: center;
+}
+
 .stats-statsandstreak {
     display: flex;
     flex-direction: column;
     gap: 2rem;
+    align-items: center;
 }
 
 .x {
@@ -24,19 +30,20 @@
 
 .stats-language-graphs-container {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 50%);
     grid-template-rows: repeat(2, 1fr);
     text-align: center;
     gap: 3rem;
     font-size: 1.2rem;
     margin: 5rem 0;
+    white-space: nowrap;
 }
 
-.stats-language-graphs-container h2{
+.stats-language-graphs-container h2 {
     padding: 2rem;
 }
 
-.a {
+.stats-usage {
     border-radius: 7px;
 }
 
@@ -49,4 +56,29 @@
     background: var(--text-color);
     border-radius: 7px;
     padding: 10px 20px;
+}
+
+@media (max-width: 1040px) {
+    .stats-yyyyyyyyy-container {
+        grid-template-columns: none;
+        width: 100%;
+    }
+
+    .stats-language-graphs-container {
+        font-size: 1rem;
+        grid-template-columns: none;
+        white-space: initial;
+    }
+
+    .x {
+        width: 90%;
+    }
+
+    .stats-usage {
+        width: 90%;
+    }
+
+    .stats-activity-container {
+        display: none;
+    }
 }
