--- a/src/index.css
+++ b/src/index.css
@@ -117,6 +117,8 @@ section {
 .heading {
     text-align: center;
     font-size: 4.5rem;
+    z-index: 1;
+    position: inherit;
 }
 
 .heading span, .home span, .footer span {
@@ -283,6 +285,7 @@ section {
     .heading {
         padding: 1.1rem;
         font-size: 3.5rem;
+        margin-top: 5rem;
     }
 }
 
